# ai_tactico

./: .env.example  .gitignore  README.md  agent.py  docker-compose.yml  load_data.py  main.py  pyproject.toml
src/: __init__.py  config.py
src/agent/: __init__.py  agent.py  llm_client.py  prompts.py  schemas.py  tools.py
src/db/: SCHEMA.md  __init__.py  client.py  ingest.py  schema.py
src/frontend/static/: app.js  style.css
src/frontend/templates/: index.html
tests/: conftest.py  test_agent.py  test_client.py  test_ingest.py  test_schema.py  test_validate.py
