[project]
name = "ai-tactico"
version = "0.1.0"
description = "Football AI analyst with Neo4j knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.8",
    "neo4j>=6.1.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
